hphp/hack/test/typecheck/variadics/ellipsis_without_hint.php
<?hh

type T = (function(...): int);
